--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "Web Customization & Tools",
     "version": "1.0",
-    "permissions": ["scripting", "activeTab", "clipboardWrite", "tabs", "windows"],
+    "permissions": ["scripting", "activeTab", "clipboardWrite", "tabs", "windows", "downloads"],
     "background": {
         "service_worker": "background.js"
     },
